--- a/car_service/autoservisas/static/css/style.css
+++ b/car_service/autoservisas/static/css/style.css
@@ -42,8 +42,105 @@ p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 a {
-    color: #71eafa;
+    color: #fa71e1;
 }
 footer {
     background-color: #3a9492;
+}
+ul.paginator {
+    list-style: none;
+    padding-inline-start: 0.5rem;
+}
+.paginator {
+    display: flex;
+    flex-direction: row;
+    padding: 0.5rem;
+    gap: 0.5rem;
+}
+.paginator a, .paginator .current {
+    text-decoration: none;
+    padding: 0 0.5rem;
+    border: 1px solid #aacc99;
+    background-color: #e8ffd0;
+    border-radius: 0.5rem;
+}
+form {
+    padding: 0.5rem;
+}
+img.car-img {
+    max-width: 20%;
+    margin: 0 0.5rem;
+    border: 2px solid #000;
+}
+ul.car-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: 0.5rem;
+    padding-inline-start: 0;
+}
+ul.car-list li {
+    max-width: 30vw;
+}
+ul.car-list img.car-img {
+    max-width: 100%;
+}
+.repair-overdue {
+    background-color: #aa0000;
+    color: #ffffff;
+    font-weight: bolder;
+    padding: 0 0.5rem;
+}
+.box {
+    padding: 0.2rem 0.5rem;
+    margin: 0.5rem;
+    border: 1px solid #999999;
+    border-radius: 0.5rem;
+}
+.box-info {
+    background-color: #99ccff;
+}
+.box-warning {
+    background-color: #ffcc99;
+}
+.box-error {
+    background-color: #ff9999;
+}
+.box-success {
+    background-color: #c0ffb0;
+}
+.box-debug {
+    background-color: #eeeeee;
+}
+form p label {
+    display: inline-block;
+    min-width: 12vw;
+}
+label[for='id_content'] {
+    display: none;
+}
+img.user-profile-picture {
+    max-width: 20vw;
+    padding: 0 0.5rem;
+    border-radius: 1rem;
+    float: left;
+}
+img.user-avatar {
+    max-height: 1rem;
+    border-radius: 0.5rem;
+}
+a.button {
+    padding: 0 0.5rem;
+    margin: 0 0.5rem;
+    border: 1px solid #999999;
+    background-color: #eeeeee;
+    border-radius: 0.5rem;
+    text-decoration: none;
+}
+a.button:hover {
+    background-color: #f8fff0;
+}
+.float-right {
+    float: right;
 }
