--- a/car_service/autoservisas/templates/base.html
+++ b/car_service/autoservisas/templates/base.html
@@ -11,12 +11,35 @@
 <body>
 <header>
     <ul class="nav">
-        <li class="logo">&#128663; <a href="http://127.0.0.1:8000/admin/autoservisas/"> Car Service </a></li>
+        <li class="logo">&#128663; <a href="http://127.0.0.1:8000/admin/autoservisas/"> Admin </a></li>
         <li><a href="{% url 'index' %}">Home</a></li>
+        <li><a href="{% url 'car_list' %}">Cars</a></li>
+        <li><a href="{% url 'order_list' %}">Orders</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'profile' %}">&#128539; {{ user.get_username }}</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'user_orders' %}">My Orders</a></li>
+            <li><a href="{% url 'user_car_list' %}">My Cars</a></li>
+        {% else %}
+            <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'signup' %}">Sign up</a></li>
+        {% endif %}
+        {% if user.is_authenticated %}
+            {% if user.is_staff or user.is_superuser %}
+                <li><a href="{% url 'admin:index' %}">Admin</a></li>
+            {% endif %}
+        {% endif %}
     </ul>
 </header>
-<main>{% block content %}
-{% endblock content %}</main>
+<main>
+{% if messages %}
+    {% for message in messages %}
+        <p class="box box-{{ message.tags }}">{{ message }}</p>
+    {% endfor %}
+{% endif %}
+{% block content %}
+{% endblock content %}
+</main>
 <footer><p>&copy; 2023 <a href="https://discord.gg/QAUWnqGF" target="_blank">PTU12 Team (Mantvydas)</a></p></footer>
 </body>
 </html>
